Trees are Radio not Checkbox, all Layers are visible at the same time, only 3 Layers, Re-add mock fixtures

--- a/app/static/assets/css/layers.css
+++ b/app/static/assets/css/layers.css
@@ -1,3 +1,11 @@
+#layers span {
+    text-align: center;
+}
+
+#layers span:before {
+    content: 'Lager ';
+}
+
 #layers button:nth-child(1) {
     box-shadow: inset 0 0 0 1000px var(--layer1-color);
     border-color: var(--layer1-color);
